Fix position of layer with floating ancestor within inline parent layer

<span style="position: relative">
  ...
    <div style="float: left">
      ...
        <target layer>
      ...
    </div>
  ...
</span>

Because of the floating ancestor, the containing layer of target layer
is not the span, but the layer found in the containing block chain.

BUG=703666,703481

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2761413002
Cr-Commit-Position: refs/heads/master@{#458857}

Former-commit-id: be8909e4d0dfe024e1b39f5abf195e63d97652ae